Fixed pagination sign alignment

--- a/application/public/css/web/main.css
+++ b/application/public/css/web/main.css
@@ -114,7 +114,7 @@ body {
 
 .onepage-pagination li a.active::before {
     z-index: -1;
-    left: 6px;
+    left: 9px;
     margin-top: 2px;
     border: none;
     color: white;
